--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 
 <body>
-  <div class="container">
+  <main>
     <div class="qr-code-and-text">
-      <img src="./images/image-qr-code.png" alt="QR code">
+      <img src="./images/image-qr-code.png" alt="QR code to frontendmentor.io">
       <div class="text">
+        <h1 class="sr-only">Improve your front-end skills by building projects</h1>
         <p class="heading">Improve your front-end skills by building projects</p>
         <p class="discription">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
-    </div>
+  </main>
   </div>
 </body>
 </html>
